apps/quant-ux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-frontend
  namespace: quant-ux
  labels:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8082
      targetPort: http
  selector:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-backend
  namespace: quant-ux
  labels:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-websocket
  namespace: quant-ux
  labels:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: websocket
spec:
  type: ClusterIP
  ports:
    - name: ws
      port: 8086
      targetPort: ws
  selector:
    app.kubernetes.io/name: quant-ux
    app.kubernetes.io/instance: quant-ux
    app.kubernetes.io/component: websocket
