apps/quant-ux/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quant-ux
  namespace: quant-ux
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Quant-UX"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "mdi-vector-square"
    gethomepage.dev/description: "Prototyping"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=quant-ux"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-quant-ux
  hostnames:
    - quant-ux.stevevaradi.me
  rules:
    - backendRefs:
        - name: quant-ux-frontend
          port: 8082
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quant-ux-ws
  namespace: quant-ux
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-quant-ux-ws
  hostnames:
    - quant-ux-ws.stevevaradi.me
  rules:
    - backendRefs:
        - name: quant-ux-websocket
          port: 8086
